--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.1.1"
   }
