--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^3.1.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
